--- a/package.json
+++ b/package.json
@@ -25,6 +25,17 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "nodemon": "1.12.1"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "css-loader": "0.28.7",
+    "eslint": "4.8.0",
+    "eslint-config-airbnb": "16.0.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "nodemon": "1.12.1",
+    "style-loader": "0.19.0",
+    "webpack": "3.6.0"
   }
 }
