--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
     "css-loader": "0.28.7",
     "eslint": "4.8.0",
     "eslint-config-airbnb": "16.0.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.1",
     "nodemon": "1.12.1",
     "style-loader": "0.19.0",
     "webpack": "3.6.0"
