--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Node.js «Кошелёк» app",
   "author": "",
   "scripts": {
+    "build": "webpack",
+    "lint": "./node_modules/.bin/eslint .",
     "start": "NODE_PATH=. nodemon source/app.js -L",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,8 +18,6 @@
     "node": "^8.2"
   },
   "dependencies": {
-    "express": "^4.15.3",
-    "body-parser": "latest",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
@@ -27,7 +27,7 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-env": "1.6.0",
     "css-loader": "0.28.7",
     "eslint": "4.8.0",
     "eslint-config-airbnb": "16.0.0",
@@ -37,7 +37,6 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.1",
     "nodemon": "1.12.1",
-    "style-loader": "0.19.0",
     "webpack": "3.6.0"
   }
 }
