--- a/package.json
+++ b/package.json
@@ -22,13 +22,22 @@
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   },
   "devDependencies": {
+    "antd": "2.13.6",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-emotion": "8.0.6",
+    "babel-plugin-import": "1.6.2",
     "babel-preset-env": "1.6.0",
+    "babel-preset-react": "6.24.1",
+    "card-info": "git+https://github.com/iniel/card-info.git",
     "css-loader": "0.28.7",
+    "emotion": "8.0.8",
+    "emotion-server": "8.0.8",
     "eslint": "4.8.0",
     "eslint-config-airbnb": "16.0.0",
     "eslint-loader": "1.9.0",
@@ -36,7 +45,11 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.1",
+    "import": "0.0.6",
+    "moment": "2.19.1",
     "nodemon": "1.12.1",
+    "react-emotion": "8.0.8",
+    "style-loader": "0.19.0",
     "webpack": "3.6.0"
   }
 }
