--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-public/bundle.js
-public/style.css
+public/bundle.client.js
+public/styles.css
+source/views/bundle.server.js
 node_modules/
 .DS_Store
 Thumbs.db
