--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.1",
+    "ignore-loader": "0.1.2",
     "import": "0.0.6",
     "moment": "2.19.1",
     "nodemon": "1.12.1",
