server-side rendering with styles

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "card-info": "git+https://github.com/iniel/card-info.git",
     "css-loader": "0.28.7",
     "emotion": "8.0.8",
-    "emotion-server": "8.0.8",
+    "emotion-server": "^8.0.8",
     "eslint": "4.8.0",
     "eslint-config-airbnb": "16.0.0",
     "eslint-loader": "1.9.0",
