--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "css-loader": "0.28.7",
     "emotion": "8.0.8",
     "emotion-server": "^8.0.8",
-    "eslint": "4.8.0",
-    "eslint-config-airbnb": "16.0.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.0.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
