--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "extract-text-webpack-plugin": "3.0.1",
     "ignore-loader": "0.1.2",
     "import": "0.0.6",
+    "log4js": "^2.3.10",
     "moment": "2.19.1",
     "nodemon": "1.12.1",
     "react-emotion": "8.0.8",
