pay controller added

--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,6 @@
   "presets": ["env", "react"],
   "plugins": [
     "emotion",
-    ["import", {libraryName: "antd", style: "css"}]
+    ["import", {"libraryName": "antd", "style": "css"}]
   ]
 }
