--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js «Кошелёк» app",
   "author": "",
   "scripts": {
+    "precommit": "npm run-script lint",
     "build": "webpack",
     "lint": "./node_modules/.bin/eslint .",
     "start": "NODE_PATH=. nodemon source/app.js -L",
@@ -46,6 +47,7 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.1",
+    "husky": "0.14.3",
     "ignore-loader": "0.1.2",
     "import": "0.0.6",
     "log4js": "^2.3.10",
