--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "antd": "2.13.6",
+    "axios": "0.17.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-emotion": "8.0.6",
