--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "node": "^8.2"
   },
   "dependencies": {
-    "koa": "^2.3.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-router": "^7.2.1",
-    "koa-static": "^4.0.1",
+    "express": "^4.16.2",
     "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-dom": "16.0.0"
