--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,3 @@
-/public/**
-/source/views/bundle.server.js
-/source/models/common/model.js
+public/
+source/views/bundle.server.js
+source/models/common/model.js
