--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "lint": "./node_modules/.bin/eslint .",
-    "start": "NODE_PATH=. nodemon source/app.js -L",
+    "start": "cross-env NODE_PATH=. nodemon source/app.js -L",
     "debug": "node --inspect-brk source/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,7 @@
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "lodash": "^4.17.4",
+    "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-dom": "16.0.0"
   },
@@ -37,6 +38,7 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "card-info": "git+https://github.com/iniel/card-info.git",
+    "cross-env": "5.1.3",
     "css-loader": "0.28.7",
     "emotion": "8.0.8",
     "emotion-server": "^8.0.8",
@@ -50,6 +52,7 @@
     "husky": "0.14.3",
     "ignore-loader": "0.1.2",
     "import": "0.0.6",
+    "indexof": "0.0.1",
     "log4js": "^2.3.10",
     "moment": "2.19.1",
     "nodemon": "1.12.1",
