--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 public/bundle.client.js
 public/styles.css
 source/views/bundle.server.js
+source/data/transactions.json
 node_modules/
 .DS_Store
 Thumbs.db
