--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "card-info": "git+https://github.com/iniel/card-info.git",
     "cross-env": "5.1.3",
     "css-loader": "0.28.7",
-    "emotion": "8.0.8",
+    "emotion": "^8.0.12",
     "emotion-server": "^8.0.8",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.0.0",
