--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lodash": "^4.17.4",
     "prop-types": "15.6.0",
     "react": "16.0.0",
-    "react-dom": "16.0.0"
+    "react-dom": "16.0.0",
+    "serialize-javascript": "1.4.0"
   },
   "devDependencies": {
     "antd": "2.13.6",
