--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "precommit": "npm run reset"
   },
   "nodemonConfig": {
-    "ignore": ["data/*"]
+    "ignore": [
+      "data/*"
+    ]
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,8 @@
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-redux": "5.0.7",
+    "redux": "4.0.0",
     "serialize-javascript": "1.4.0"
   },
   "devDependencies": {
