--- a/package.json
+++ b/package.json
@@ -31,43 +31,43 @@
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "lodash": "^4.17.4",
-    "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0",
-    "serialize-javascript": "1.4.0"
+    "prop-types": "^15.6.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "serialize-javascript": "^1.4.0"
   },
   "devDependencies": {
-    "antd": "2.13.6",
-    "axios": "0.17.0",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-emotion": "8.0.6",
-    "babel-plugin-import": "1.6.2",
-    "babel-preset-env": "1.6.0",
-    "babel-preset-react": "6.24.1",
+    "antd": "^2.13.6",
+    "axios": "^0.17.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-emotion": "^8.0.6",
+    "babel-plugin-import": "^1.6.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "card-info": "git+https://github.com/iniel/card-info.git",
-    "cross-env": "5.1.3",
-    "css-loader": "0.28.7",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.7",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.8",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.0.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.1",
-    "husky": "0.14.3",
-    "ignore-loader": "0.1.2",
-    "import": "0.0.6",
-    "indexof": "0.0.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "husky": "^0.14.3",
+    "ignore-loader": "^0.1.2",
+    "import": "^0.0.6",
+    "indexof": "^0.0.1",
     "log4js": "^2.3.10",
-    "moment": "2.19.1",
-    "nodemon": "1.12.1",
-    "react-emotion": "8.0.8",
-    "style-loader": "0.19.0",
-    "webpack": "3.6.0"
+    "moment": "^2.19.1",
+    "nodemon": "^1.12.1",
+    "react-emotion": "^8.0.8",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.6.0"
   }
 }
