--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "^8.2"
   },
   "dependencies": {
+    "card-info": "1.2.4",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
@@ -39,35 +40,34 @@
     "serialize-javascript": "^1.4.0"
   },
   "devDependencies": {
-    "antd": "^2.13.6",
-    "axios": "^0.17.0",
+    "antd": "2.13.13",
+    "axios": "0.17.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-emotion": "^8.0.6",
-    "babel-plugin-import": "^1.6.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-emotion": "8.0.12",
+    "babel-plugin-import": "1.7.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "^6.24.1",
-    "card-info": "git+https://github.com/iniel/card-info.git",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.7",
+    "cross-env": "5.1.4",
+    "css-loader": "0.28.11",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.8",
-    "eslint": "^4.9.0",
+    "eslint": "4.19.1",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.7.0",
+    "extract-text-webpack-plugin": "3.0.2",
     "husky": "^0.14.3",
     "ignore-loader": "^0.1.2",
     "import": "^0.0.6",
     "indexof": "^0.0.1",
-    "log4js": "^2.3.10",
-    "moment": "^2.19.1",
-    "nodemon": "^1.12.1",
-    "react-emotion": "^8.0.8",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.6.0"
+    "log4js": "2.5.3",
+    "moment": "^2.22.1",
+    "nodemon": "1.17.3",
+    "react-emotion": "8.0.12",
+    "style-loader": "0.19.1",
+    "webpack": "3.11.0"
   }
 }
