--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "node": "^8.2"
   },
   "dependencies": {
-    "koa": "^2.3.0",
+    "koa": "2.5.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
-    "lodash": "^4.17.4",
+    "lodash": "4.17.10",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -41,7 +41,7 @@
   "devDependencies": {
     "antd": "2.13.13",
     "axios": "0.17.1",
-    "babel-core": "^6.26.0",
+    "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
     "babel-plugin-emotion": "8.0.12",
     "babel-plugin-import": "1.7.0",
