Prepaid fixed + backend validation

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": "^8.2"
   },
   "dependencies": {
-    "koa": "2.5.1",
+    "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
@@ -36,38 +36,40 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "serialize-javascript": "^1.4.0"
   },
   "devDependencies": {
-    "antd": "2.13.13",
-    "axios": "0.17.1",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.4",
-    "babel-plugin-emotion": "8.0.12",
-    "babel-plugin-import": "1.7.0",
-    "babel-preset-env": "1.6.1",
+    "antd": "^2.13.13",
+    "axios": "^0.17.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-emotion": "^8.0.12",
+    "babel-plugin-import": "^1.7.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "card-info": "git+https://github.com/iniel/card-info.git",
-    "cross-env": "5.1.4",
-    "css-loader": "0.28.11",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.8",
-    "eslint": "4.19.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "2.11.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.7.0",
-    "extract-text-webpack-plugin": "3.0.2",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "husky": "^0.14.3",
     "ignore-loader": "^0.1.2",
     "import": "^0.0.6",
     "indexof": "^0.0.1",
-    "log4js": "2.5.3",
+    "log4js": "^2.5.3",
     "moment": "^2.22.1",
-    "nodemon": "1.17.3",
-    "react-emotion": "8.0.12",
-    "style-loader": "0.19.1",
-    "webpack": "3.11.0"
+    "nodemon": "^1.17.3",
+    "react-emotion": "^8.0.12",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.11.0"
   }
 }
