--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "scripts": {
     "build": "webpack",
-    "lint": "./node_modules/.bin/eslint .",
+    "lint": "./node_modules/.bin/eslint . --fix",
     "start": "cross-env NODE_PATH=. nodemon source/app.js -L",
     "debug": "node --inspect-brk source/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
