--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "serialize-javascript": "^1.4.0"
@@ -61,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.5",
     "husky": "^0.14.3",
     "ignore-loader": "^0.1.2",
     "import": "^0.0.6",
