--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack",
     "lint": "./node_modules/.bin/eslint . --fix",
     "start": "cross-env NODE_PATH=. nodemon source/app.js -L",
+    "heroku": "npm run build && NODE_PATH=. node source/app.js",
     "debug": "node --inspect-brk source/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "reset": "node libs/reset-data",
@@ -38,9 +39,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "serialize-javascript": "^1.4.0"
-  },
-  "devDependencies": {
+    "serialize-javascript": "^1.4.0",
     "antd": "^2.13.13",
     "axios": "^0.17.1",
     "babel-core": "^6.26.3",
@@ -67,7 +66,7 @@
     "ignore-loader": "^0.1.2",
     "import": "^0.0.6",
     "indexof": "^0.0.1",
-    "log4js": "^2.5.3",
+    "log4js": "^2.11.0",
     "moment": "^2.22.1",
     "nodemon": "^1.17.3",
     "react-emotion": "^8.0.12",
